--- a/fb_odin_app/app/views/devise/registrations/edit.html.erb
+++ b/fb_odin_app/app/views/devise/registrations/edit.html.erb
@@ -3,9 +3,17 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
-  <hr>
-  hey
-  <hr>
+
+
+  <div class="field">
+    <%= f.label :first_name %><br />
+    <%= f.text_field :first_name, autofocus: true %>
+  </div>
+
+  <div class="field">
+    <%= f.label :last_name %><br />
+    <%= f.text_field :last_name, autofocus: true %>
+  </div>
 
   <div class="field">
     <%= f.label :email %><br />
