--- a/fb_odin_app/app/views/layouts/application.html.erb
+++ b/fb_odin_app/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
   <li><%= link_to 'Sign up', new_user_registration_path %></li>
 <% end %>
 <% if user_signed_in? %>
-  <li><%= link_to 'Users', "#" %></li>
+  <li><%= link_to 'Users', users_path %></li>
 <% end %>
 
   <% flash.each do |message_type, message| %>
