--- a/fb_odin_app/app/views/users/show.html.erb
+++ b/fb_odin_app/app/views/users/show.html.erb
@@ -1,3 +1,13 @@
 <h1>User Profile page!</h1>
 
 <%= debug @user.attributes %>
+
+  <div class="col-md-8">
+    <% if @user.posts.any? %>
+      <h3>Posts (<%= @user.posts.count %>)</h3>
+      <ol class="posts">
+        <%= render @posts %>
+      </ol>
+      <%= @posts %>
+    <% end %>
+  </div>
