--- a/fb_odin_app/app/views/posts/index.html.erb
+++ b/fb_odin_app/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<% @posts.each do |post| %>
-  <%= debug post.attributes %>
-  <hr>
-<% end %>
+<h1>All of the Posts! Maybe this is the feed!</h1>
+<br>
+<%= render @posts %>
+<hr>
