--- a/fb_odin_app/app/views/posts/_post.html.erb
+++ b/fb_odin_app/app/views/posts/_post.html.erb
@@ -1,7 +1,8 @@
 <li id="post-<%= post.id %>">
 
-  <span class="user"><%= post.user.first_name %><br></span>
+
   <span class="content"><%= post.content %></span><br>
+  By: <span class="user"><%= post.user.first_name %><br></span>
   <span class="timestamp">
     Posted <%= time_ago_in_words(post.created_at) %> ago.
   </span>
