--- a/fb_odin_app/app/views/static_pages/home.html.erb
+++ b/fb_odin_app/app/views/static_pages/home.html.erb
@@ -2,3 +2,6 @@
 <p>
   The time is now: <%= Time.now %>
 </p>
+<p>
+  This page doesn't do much, buts its the home page, really the home page should be the posts
+</p>
