--- a/fb_odin_app/app/views/users/show.html.erb
+++ b/fb_odin_app/app/views/users/show.html.erb
@@ -5,7 +5,8 @@ Full Name: <%= @user.first_name %> <%= @user.last_name %>
 
   <div class="col-md-8">
     <% if @user.posts.any? %>
-      <h3>Posts (<%= @user.posts.count %>)</h3>
+
+      <h3>My Posts: (<%= @user.posts.count %>)</h3>
       <ol class="posts">
         <%= render @posts %>
       </ol>
