--- a/fb_odin_app/app/views/layouts/application.html.erb
+++ b/fb_odin_app/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   <li><%= link_to 'Edit account', edit_user_registration_path %></li>
   <li><%= link_to 'Sign out', destroy_user_session_path, :method=>'delete' %></li>
   <li><%= link_to "My Profile", current_user %> </li>
+  <li><%= link_to "Create new post!", new_post_path %></li>
 
 
 
