--- a/fb_odin_app/app/views/users/index.html.erb
+++ b/fb_odin_app/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Users page</h1>
 
 <% @users.each do |user| %>
-  <%= debug user.attributes %>
+  <%= link_to "#{user.first_name} #{user.last_name}", user_path(user)  %>
   <hr>
 <% end %>
