added add friend link to user index page, no link on it currently

--- a/fb_odin_app/app/views/users/index.html.erb
+++ b/fb_odin_app/app/views/users/index.html.erb
@@ -2,5 +2,6 @@
 
 <% @users.each do |user| %>
   <%= link_to "#{user.first_name} #{user.last_name}", user_path(user)  %>
+  <%= link_to "Add as friend", '#' %>
   <hr>
 <% end %>
