--- a/fb_odin_app/app/views/users/show.html.erb
+++ b/fb_odin_app/app/views/users/show.html.erb
@@ -2,6 +2,15 @@
 
 Full Name: <%= @user.first_name %> <%= @user.last_name %>
 
+<hr>
+
+<h3>My friend requests:</h3>
+
+  <p>
+    friend request notifcation goes here
+  </p>
+
+  <hr>
 
   <div class="col-md-8">
     <% if @user.posts.any? %>
