--- a/fb_odin_app/app/views/users/show.html.erb
+++ b/fb_odin_app/app/views/users/show.html.erb
@@ -4,6 +4,24 @@ Full Name: <%= @user.first_name %> <%= @user.last_name %>
 
 <hr>
 
+<h3>My friends:</h3>
+
+  <p>
+    <h5>Real Friends:</h5>
+    <% @user.real_friends.each do |friend| %>
+      <%= friend.first_name %>
+    <% end %>
+  </p>
+
+    <p>
+    <h5>Sham Friends:</h5>
+    <% @user.kinda_friends.each do |fake| %>
+      <%= fake.first_name %>
+    <% end %>
+  </p>
+
+  <hr>
+
 <h3>My friend requests:</h3>
 
   <p>
