just wrapping up friend requests feature, it doesn't look pretty, but it works
very helpful link (but i improved the friend algorithim):
https://stackoverflow.com/questions/25101089/mutual-friendship-rails-4

--- a/fb_odin_app/app/views/users/show.html.erb
+++ b/fb_odin_app/app/views/users/show.html.erb
@@ -48,6 +48,6 @@ Full Name: <%= @user.first_name %> <%= @user.last_name %>
       <ol class="posts">
         <%= render @posts %>
       </ol>
-      <% # will paginate @posts %>
+       <!-- # will paginate @posts -->
     <% end %>
   </div>
