--- a/fb_odin_app/app/views/posts/_post.html.erb
+++ b/fb_odin_app/app/views/posts/_post.html.erb
@@ -3,7 +3,10 @@
 
   <span class="content"><%= post.content %></span><br>
 
-  <span class="like button"><%= link_to "Like this post", "#" %></span>
+  <span class="like button">
+    <%= link_to "Like this post", "#" %>
+  </span>
+  <!-- Like.create(post_id:post.id, user_id:current_user.id) -->
   <br>
 
   By: <span class="user"><%= post.user.first_name %></span>
