added likers partial, and look at how post arg was passsed to partial in the render line, new for me

--- a/fb_odin_app/app/views/posts/_post.html.erb
+++ b/fb_odin_app/app/views/posts/_post.html.erb
@@ -11,7 +11,7 @@
 
   <span class="likes">
     <%= link_to "Like?", likes_path(:post_id => post.id) , method: :post %>
-    <%= link_to "Likers(#{ post.likes.count })", "#likers" %>
+    <%= render 'likes/likers', post: post %>
   </span>
   <hr>
 
