next steps: liking partial: (see below)
I need to fix like button so if you have liked the post, you can't like it again, its a logic thang

--- a/fb_odin_app/app/views/posts/_post.html.erb
+++ b/fb_odin_app/app/views/posts/_post.html.erb
@@ -10,7 +10,8 @@
   <br>
 
   <span class="likes">
-    <%= link_to "Like?", likes_path(:post_id => post.id) , method: :post %>
+
+    <%= render 'likes/like_button', post: post %>
     <%= render 'likes/likers', post: post %>
   </span>
   <hr>
