--- a/fb_odin_app/app/views/posts/_post.html.erb
+++ b/fb_odin_app/app/views/posts/_post.html.erb
@@ -10,9 +10,12 @@
   <br>
 
   <span class="likes">
-
     <%= render 'likes/like_button', post: post %>
     <%= render 'likes/likers', post: post %>
+  </span>
+
+  <span class= "comments">
+
   </span>
 <hr>
 
