easier to just create the new forms in seperate page and embed later

--- a/fb_odin_app/app/views/comments/_comment.html.erb
+++ b/fb_odin_app/app/views/comments/_comment.html.erb
@@ -6,6 +6,10 @@
 
 
       <!-- delete option -->
+      <br>
+      Comment on this: (i put partial back up chain)
+
+
 
       <% if current_user.id == comment.user_id %>
         <%= link_to "delete comment", comment_path(:id => comment.id), method: :delete %>
