--- a/fb_odin_app/app/views/posts/_post.html.erb
+++ b/fb_odin_app/app/views/posts/_post.html.erb
@@ -17,11 +17,14 @@
 
 
   <span class= "comments">
-    <%= render 'comments/comment', post: post %>
+    <% # render 'comments/comment', post: post %>
+
+    <%= render partial: 'comments/comment', collection: post.comments %>
+
+    <% #def render the new comment form here %>
 
   </span>
 
-<hr>
-
+  <hr>
 </div>
 
