can see post id number

--- a/fb_odin_app/app/views/posts/_post.html.erb
+++ b/fb_odin_app/app/views/posts/_post.html.erb
@@ -1,6 +1,6 @@
 
 <div id="post-<%= post.id %>">
-  <h4>Post</h4>
+  <h4>Post <%= post.id %></h4>
   <span class="content"><%= post.content %></span><br>
   <br>
 
