--- a/fb_odin_app/app/views/posts/_post.html.erb
+++ b/fb_odin_app/app/views/posts/_post.html.erb
@@ -19,7 +19,22 @@
     <%= render partial: 'comments/comment', collection: post.comments %>
   </span>
 
-<hr>
+  <span class= "comment creation">
+
+  <%= form_for @comment do |comment| %>
+
+  <%= comment.text_field :content %>
+
+  <%= comment.hidden_field :user_id, :value => current_user.id %>
+
+  <%= comment.hidden_field :post_id, :value => post.id %>
+
+  <%= comment.submit "Comment!" %>
+
+<% end %>
+  </span>
+
+
 
 </div>
 
