friend request partial made

--- a/fb_odin_app/app/views/users/show.html.erb
+++ b/fb_odin_app/app/views/users/show.html.erb
@@ -22,23 +22,9 @@ Full Name: <%= @user.first_name %> <%= @user.last_name %>
 
   <hr>
 
-<h3>My friend requests:</h3>
+<%= render 'friendships/requests' %>
 
-  <p>
-    <% if current_user == @user %>
-        <ul>
-            <% @user.requested_friendships.each do |request| %>
-            <li>
-              <%= request.email %>
-              <%= link_to "Accept", friendship_path(:id => request), :method => "put" %>
-              <%= link_to "Decline", friendship_path(:id => request), :method => :delete %>
-            </li>
-          <% end %>
-        </ul>
-    <% end %>
-  </p>
 
-  <hr>
 
   <div class="col-md-8">
     <% if @user.posts.any? %>
