friend request notification in heading

--- a/fb_odin_app/app/views/layouts/_header.html.erb
+++ b/fb_odin_app/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
   </li>
 
   <li>
-    <%= link_to "My Profile", current_user %>
+    <%= link_to "My Profile(#{current_user.friend_requests.count})", current_user %>
   </li>
 
   <li>
