working logic for friending others/self/current friends, need to clean

--- a/fb_odin_app/app/views/users/index.html.erb
+++ b/fb_odin_app/app/views/users/index.html.erb
@@ -2,9 +2,13 @@
 
 <% @users.each do |user| %>
   <%= link_to "#{user.first_name} #{user.last_name}", user_path(user)  %>
-      <% unless current_user == user %>
-        <%= link_to "Add Friend", friendships_path(:friend_id => user.id), :method => :post %>
-    <% end %>
+      <% if current_user == user %>
+        (can't friend self)
+      <% elsif current_user.friends.include?(user) %>
+        (already friends)
+      <% else %>
+        (you can friend!)<%= link_to "Add Friend", friendships_path(:friend_id => user.id), :method => :post %>
+      <% end %>
   <hr>
 <% end %>
 
