--- a/fb_odin_app/app/views/users/index.html.erb
+++ b/fb_odin_app/app/views/users/index.html.erb
@@ -3,12 +3,11 @@
 <% @users.each do |user| %>
   <%= link_to "#{user.first_name} #{user.last_name}", user_path(user)  %>
       <% if current_user == user %>
-        (can't friend self)
+        <!-- (can't friend self) -->
       <% elsif current_user.friends.include?(user) %>
-        (already friends)
+        <!-- (already friends) -->
       <% else %>
-        (you can friend!)<%= link_to "Add Friend", friendships_path(:friend_id => user.id), :method => :post %>
+        <%= link_to "Add Friend", friendships_path(:friend_id => user.id), :method => :post %>
       <% end %>
   <hr>
 <% end %>
-
