--- a/fb_odin_app/app/views/users/index.html.erb
+++ b/fb_odin_app/app/views/users/index.html.erb
@@ -3,11 +3,31 @@
 <% @users.each do |user| %>
   <%= link_to "#{user.first_name} #{user.last_name}", user_path(user)  %>
       <% if current_user == user %>
-        <!-- (can't friend self) -->
+        (can't friend self)
+
+
+
       <% elsif current_user.friends.include?(user) %>
-        <!-- (already friends) -->
+        (already friends)
+
+
       <% else %>
         <%= link_to "Add Friend", friendships_path(:friend_id => user.id), :method => :post %>
       <% end %>
   <hr>
 <% end %>
+
+
+
+
+<!-- if current_user.sent_friendship_requests.include?(user_2_id:user)
+
+  if you requested this person, and it's pending, then you can't send them another request
+
+current_user.sent_friendship_requests.where(user_2_id: user.id)[0].user_2_status == "pending"
+
+         elsif user.friend_requests.where(user_1_id:current_user.id, user_2_status:"pending")
+        (already sent a request)
+
+
+ if any of the sent friend requests -->
