user cant send a second friend request while first request is pending

--- a/fb_odin_app/app/views/users/index.html.erb
+++ b/fb_odin_app/app/views/users/index.html.erb
@@ -6,6 +6,8 @@
         (can't friend self)
 
 
+      <% elsif @array_of_pending_requested_users_ids.include?(user.id) %>
+        (already requested)
 
       <% elsif current_user.friends.include?(user) %>
         (already friends)
