--- a/fb_odin_app/app/views/users/index.html.erb
+++ b/fb_odin_app/app/views/users/index.html.erb
@@ -7,7 +7,7 @@
 
 
       <% elsif @array_of_pending_requested_users_ids.include?(user.id) %>
-        (already requested)
+        (you already requested)
 
         <% elsif @second_array.include?(user.id) %>
         (user already requested you!)
