--- a/fb_odin_app/app/views/users/show.html.erb
+++ b/fb_odin_app/app/views/users/show.html.erb
@@ -1,5 +1,7 @@
 <h1><%= @user.first_name %>'s Profile page!</h1>
 
+<%= gravatar_for @user %><br>
+
 Full Name: <%= @user.first_name %> <%= @user.last_name %>
 
 <hr>
