facebook sign in feature mvp complete

--- a/fb_odin_app/app/views/devise/registrations/new.html.erb
+++ b/fb_odin_app/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,9 @@
 <h2>Sign up</h2>
 
+<br> app/views/devise/registrations/new.html.erb<br>
 <%= debug resource.attributes %>
+
+
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
