--- a/fb_odin_app/app/views/layouts/application.html.erb
+++ b/fb_odin_app/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
   <header class="navbar navbar-fixed-top navbar-inverse">
     <div class="container">
-      <%= link_to "sample app", '#', id: "logo" %>
+      <%= link_to "OdinBook", '#', id: "logo" %>
       <nav>
         <ul class="nav navbar-nav navbar-right">
           <%= render 'layouts/header' %>
