--- a/fb_odin_app/app/views/layouts/_header.html.erb
+++ b/fb_odin_app/app/views/layouts/_header.html.erb
@@ -34,5 +34,11 @@
 
 
 <% flash.each do |message_type, message| %>
-  <div class="alert alert-<%= message_type %>"><%= message %></div>
+
+<div id="error_explanation">
+    <div class="alert alert-<%= message_type %>"><%= message %></div>
+</div>
+
 <% end %>
+
+
