seperated error form from header, formatting is good enough for now

--- a/fb_odin_app/app/assets/stylesheets/custom.css.scss
+++ b/fb_odin_app/app/assets/stylesheets/custom.css.scss
@@ -65,3 +65,14 @@ p {
   color: #fff;
   text-decoration: none;
 }
+
+
+/* forms */
+
+#error_explanation {
+  text-align:center;
+  color: red;
+  ul {
+    color: red;
+  }
+}
