--- a/fb_odin_app/app/views/layouts/application.html.erb
+++ b/fb_odin_app/app/views/layouts/application.html.erb
@@ -20,6 +20,10 @@
   </header>
 
   <div class="container">
+    <%= render 'shared/error_messages' %>
+  </div>
+
+  <div class="container">
     <%= yield %>
   </div>
 
